workloads/kube-hello-file-server/base/middleware-files-test.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kube-hello-file-server-files-test-redirect
spec:
  redirectRegex:
    regex: ^(https?)://([^/]+)/files-test$
    replacement: ${1}://${2}/files
    permanent: true
