workloads/kube-hello-file-server/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kube-hello-file-server-root-redirect
spec:
  redirectRegex:
    regex: ^(https?)://file-server\.k3s\.dgkim\.net/$
    replacement: ${1}://file-server.k3s.dgkim.net/files
    permanent: true
