workloads/kube-hello-file-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-hello-file-server
  labels:
    app: kube-hello-file-server
spec:
  selector:
    app: kube-hello-file-server
  ports:
    - name: http
      port: 80
      targetPort: 3000
