workloads/kube-hello-file-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-hello-file-server
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hello-dev-kube-hello-file-server-root-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: kube-hello-file-server
                port:
                  number: 80
    - host: file-server.k3s.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-hello-file-server
                port:
                  number: 80
